fix: tests corrected